--- a/analytics_dashboard/courses/templates/courses/performance_graded_content_by_type.html
+++ b/analytics_dashboard/courses/templates/courses/performance_graded_content_by_type.html
@@ -10,7 +10,7 @@
 
 {% block child_content %}
   <section class="view-section">
-    {% include "courses/_graded_content_nav.html" with active="assignment_type" assignment_types=assignment_types assignments=assignments %}
+    {% include "courses/_graded_content_nav.html" with active="assignment_type" assignment_type=assignment_type assignment_types=assignment_types assignments=assignments %}
 
     <div class="section-content section-data-graph">
       <div class="section-content section-data-viz">
