--- a/analytics_dashboard/courses/templates/courses/_graded_content_nav.html
+++ b/analytics_dashboard/courses/templates/courses/_graded_content_nav.html
@@ -13,7 +13,6 @@
                 {% else %}
                   {% trans "Select Assignment Type" %}
                 {% endif %}
-
                 <span class="caret"></span>
               </span>
             <ul class="dropdown-menu" role="menu" aria-labelledby="assignmentTypeMenu">
@@ -38,7 +37,13 @@
           <li class="{% if active == "assignments" %}active{% endif %} nav-section">
             <div class="dropdown">
               <span class="link-label dropdown-toggle" id="assignmentMenu" data-toggle="dropdown">
-                {% trans "Assignments" %}
+                {% if assignment_name %}
+                  {{assignment_name}}
+                {% else %}
+                  {% blocktrans %}
+                    Select {{assignment_type}}
+                  {% endblocktrans %}
+                {% endif %}
                 <span class="caret"></span>
               </span>
               <ul class="dropdown-menu" role="menu" aria-labelledby="assignmentMenu">
